# techdrop

./: .gitignore  CMakeLists.txt  README.md  bd.db
src/: bd.c  bd.h  estadisticas.c  estadisticas.h  estructuras.c  main.c  menu.c  menu.h  menus.c  menus.h  usuario.c  usuario.h  utils.c  utils.h
src/estructuras/: estructuras.h  robot.c  robot.h  usuario.c  usuario.h
src/menus/: menu_menus.c  menus.c  menus.h  usuario.c  usuario.h  utils.c  utils.h
src/screens/: gestion_menu.c  gestion_menu.h
